fix: Made cards align correctly after the use of filters, added model-friendly CSS version of filters buttons

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ h1 {
     padding: 1rem;
 }
 
-/***** Filtres */
+/***** Filters */
 .filters-form {
     display: flex;
     gap: 15px;
@@ -266,14 +266,10 @@ h1 {
     background-color: #DEEBFF;
 } */
 
-/*** Fonctionnement des filtres */
+/*** Filters Functioning */
 /* Bien que les boutons n'étaient pas exigés fonctionnels dans le cahier des charges de l'agence, je me suis challengé pour essayer de les rendre fonctionnels en HTML & CSS seulement. Ce sera bien sûr beaucoup plus simple à faire quand le JS sera ajouté, et il suffira alors de supprimer la partie ci-dessous du code CSS */
-/* main:has(.filters-btn-check:has(:checked)) .hebergements {
+main:has(.filters-btn-check:checked) .hebergements {
     height: fit-content;
-}
-
-main:has(.filters-btn-check:checked) .hebergements-cards {
-    justify-content: flex-start;
 }
 
 main:has(.filters-btn-check#economiques:checked) .hebergements a:not(.economique) {
@@ -290,7 +286,7 @@ main:has(.filters-btn-check#romantiques:checked) .hebergements a:not(.romantique
 
 main:has(.filters-btn-check#pepites:checked) .hebergements a:not(.pepite) {
     display: none;
-} */
+}
 
 /*** Info number of lodgings */
 .info-num-lodgings {
@@ -331,17 +327,20 @@ main:has(.filters-btn-check#pepites:checked) .hebergements a:not(.pepite) {
     width: 65%;
 }
 
+/* Entièrement possible de rester sur une flexbox, mais pour le fonctionnement des filtres par la suite le display: grid est plus adapté */
 .hebergements-cards {
-    display: flex;
-    justify-content: space-between;
     margin-top: 30px;
+    /* display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template: auto / repeat(3, 1fr);
     gap: 30px;
-    flex-wrap: wrap;
 }
 
 /* 29% et non 30% ; pour afficher 3 cards par rangées quelque soit la longueur */
 .hebergements a {
-    width: 29%;
+    width: auto;
 }
 
 .hebergements-cards img {
